Corrected vehicle weight display

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -38,8 +38,8 @@
               <td>{{actor.system.vehicle.hnd}}/{{actor.system.vehicle.sr}}</td>
               <td>{{actor.system.vehicle.ht.value}}{{actor.system.vehicle.ht.code}}</td>
               <td>{{actor.system.vehicle.accelerationInput}}/{{actor.system.vehicle.move.input}}{{actor.system.vehicle.move.code}}</td>
-              <td>{{round actor.system.vehicle.lwt 100}}</td>
-              <td>{{round actor.system.vehicle.load 100}}</td>
+              <td>{{round actor.system.vehicle.weight.lwt 100}}</td>
+              <td>{{round actor.system.vehicle.weight.load 100}}</td>
               <td>{{actor.system.bio.sm.value}}</td>
               <td>{{actor.system.vehicle.crew}}+{{actor.system.vehicle.passengers}}{{actor.system.vehicle.occCode}}</td>
               <td>
