#128 - Updated how move is input and stored to split up ground, air, and water craft.

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -230,9 +230,9 @@
               <tr class="design-row">
                 <td>Move</td>
                 <td style="display: flex">
-                  <input name="system.vehicle.acceleration.input" type="number" value="{{actor.system.vehicle.acceleration.input}}" placeholder="3" />
+                  <input name="system.vehicle.acceleration.ground" type="number" value="{{actor.system.vehicle.acceleration.ground}}" placeholder="3" />
                   <span style="font-size: xx-large; padding: 0 0.2em;">/</span>
-                  <input name="system.vehicle.move.input" type="number" value="{{actor.system.vehicle.move.input}}" placeholder="30" />
+                  <input name="system.vehicle.move.ground" type="number" value="{{actor.system.vehicle.move.ground}}" placeholder="30" />
                   <select name="system.vehicle.move.code" class="craftType" style="height: unset">
                     {{selectOptions vehicleMoveTypes selected=actor.system.vehicle.move.code}}
                   </select>
