#128 - The Travel tab on Simple Vehicles sheets now lets ground vehicles filter by terrain type when calculating movement cost and time

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -136,6 +136,22 @@
                   </div>
                 </td>
               </tr>
+
+              <tr class="design-row">
+                <td style="line-height: 27.5px">
+                  Terrain Quality
+                </td>
+                <td>
+                  <select style="width: 70%" name="system.travel.terrainQuality">
+                    {{selectOptions terrainQualities selected=actor.system.travel.terrainQuality}}
+                  </select>
+                </td>
+                <td class="question-container" id="travel-terrain-quality">
+                  <div class="question-button">
+                    <i class="fas fa-question"></i>
+                  </div>
+                </td>
+              </tr>
             </table>
 
             <table>
