#128 - Removed unused tabs and rearranged existing ones to a more user friendly order.

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -60,19 +60,13 @@
     {{!-- Sheet Tab Navigation --}}
     <nav id="tabselect" class="sheet-tabs tabs" data-group="primary">
       <div class="header">
-        <a class="item" data-tab="stats">Stats</a>
+        <a class="item" data-tab="stats">Travel</a>
       </div>
       <div class="header">
         <a class="item" data-tab="chase">Chase</a>
       </div>
       <div class="header">
-        <a class="item" data-tab="combat">Combat</a>
-      </div>
-      <div class="header">
         <a class="item" data-tab="items">Cargo</a>
-      </div>
-      <div class="header">
-        <a class="item" data-tab="travel">Travel</a>
       </div>
       <div class="header">
         <a class="item" data-tab="input">Design - Basics</a>
@@ -88,19 +82,8 @@
     {{!-- Sheet Body --}}
     <section class="sheet-body">
 
-      {{!-- Stats Tab --}}
-      <div class="tab stats" data-tab="stats" data-group="primary">
-        <div class="design-block">
-          <!-- Start vanilla vehicle stat line -->
-          <div>
-
-          </div>
-          <!-- End of vanilla vehicle stat line -->
-        </div>
-      </div>
-
       {{!-- Travel Tab --}}
-      <div class="tab travel" data-tab="travel" data-group="primary">
+      <div class="tab travel" data-tab="stats" data-group="primary">
         <div class="design-block">
           <!-- Start of left pane -->
           <div style="width: 50%;">
