--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -906,6 +906,7 @@
                   </div>
                 </td>
               </tr>
+              {{#if (eq actor.system.vehicle.craftType "land")}}
               <tr class="design-row">
                 <td style="line-height: 27.5px">
                   Chase Terrain
@@ -921,23 +922,28 @@
                   </div>
                 </td>
               </tr>
+              {{else if (and (eq actor.system.vehicle.craftType "water") actor.system.vehicle.sailing)}}
+              <tr class="design-row">
+                <td style="line-height: 27.5px">
+                  Wind Conditions
+                </td>
+                <td>
+                  <select style="width: 70%" name="system.chase.windCondition">
+                    {{selectOptions chaseWindTypes selected=actor.system.chase.windCondition}}
+                  </select>
+                </td>
+                <td class="question-container" id="chase-wind-condition">
+                  <div class="question-button">
+                    <i class="fas fa-question"></i>
+                  </div>
+                </td>
+              </tr>
+              {{/if}}
               <tr class="design-row">
                 <td>Effective Acceleration / Move</td>
                 <td>
-                  {{round actor.system.vehicle.acceleration.ground 1}} /
-                  {{#if (eq actor.system.chase.terrainQuality "rail")}}
-                  {{round actor.system.vehicle.move.rail 1}}
-                  {{else if (eq actor.system.chase.terrainQuality "road")}}
-                  {{round actor.system.vehicle.move.road 1}}
-                  {{else if (eq actor.system.chase.terrainQuality "good")}}
-                  {{round actor.system.vehicle.move.good 10}}
-                  {{else if (eq actor.system.chase.terrainQuality "average")}}
-                  {{round actor.system.vehicle.move.average 10}}
-                  {{else if (eq actor.system.chase.terrainQuality "bad")}}
-                  {{round actor.system.vehicle.move.bad 100}}
-                  {{else if (eq actor.system.chase.terrainQuality "veryBad")}}
-                  {{round actor.system.vehicle.move.veryBad 100}}
-                  {{/if}} yards per second
+                  {{round actor.system.chase.acceleration 10}} /
+                  {{round actor.system.chase.move 100}} yards per second
                 </td>
                 <td class="question-container" id="vehicle-chase-effective-move">
                   <div class="question-button">
@@ -948,19 +954,7 @@
               <tr class="design-row">
                 <td>Effective Top Speed</td>
                 <td>
-                  {{#if (eq actor.system.chase.terrainQuality "rail")}}
-                    {{multiply actor.system.vehicle.move.rail 1 2}}
-                  {{else if (eq actor.system.chase.terrainQuality "road")}}
-                    {{multiply actor.system.vehicle.move.road 1 2}}
-                  {{else if (eq actor.system.chase.terrainQuality "good")}}
-                    {{multiply actor.system.vehicle.move.good 10 2}}
-                  {{else if (eq actor.system.chase.terrainQuality "average")}}
-                    {{multiply actor.system.vehicle.move.average 10 2}}
-                  {{else if (eq actor.system.chase.terrainQuality "bad")}}
-                    {{multiply actor.system.vehicle.move.bad 100 2}}
-                  {{else if (eq actor.system.chase.terrainQuality "veryBad")}}
-                    {{multiply actor.system.vehicle.move.veryBad 100 2}}
-                  {{/if}} mph
+                  {{multiply actor.system.chase.move 100 2}} mph
                 </td>
                 <td class="question-container" id="vehicle-chase-effective-top-speed">
                   <div class="question-button">
