#128 - Updated how costs are stored and calculated for Simple Vehicles.

--- a/templates/actor/Simple Vehicle-sheet.html
+++ b/templates/actor/Simple Vehicle-sheet.html
@@ -44,7 +44,7 @@
               <td>{{actor.system.vehicle.crew}}+{{actor.system.vehicle.passengers}}{{actor.system.vehicle.occCode}}</td>
               <td>{{displaySimpleVehicleArmour actor.system.vehicle}}</td>
               <td>{{actor.system.vehicle.range}}</td>
-              <td>{{displayCurrencyNoDecimals actor.system.vehicle.finalCost}}$</td>
+              <td>{{displayCurrencyNoDecimals actor.system.cost.finalCost}}$</td>
               <td>{{actor.system.vehicle.locations}}</td>
             </tr>
           </table>
